# BHY2_SensorAPI

./: .gitignore  CMakeLists.txt
firmware/bhi360/: BHI360_BMM350C.fw.h
